--- a/packages/css/src/components/radio.css
+++ b/packages/css/src/components/radio.css
@@ -12,7 +12,7 @@ input[type="radio"].m-radio {
   height: var(--radio-size);
   position: relative;
   border: 2px solid var(--radio-border-color);
-  border-radius: var(--border-radius-full);
+  border-radius: var(--radius-full);
   cursor: pointer;
   /* NOTE: Non-critical property, so this is acceptable */
   /* stylelint-disable-next-line plugin/use-baseline */
@@ -25,7 +25,7 @@ input[type="radio"].m-radio {
     width: calc(var(--radio-size) / 2);
     height: calc(var(--radio-size) / 2);
     background-color: transparent;
-    border-radius: var(--border-radius-full);
+    border-radius: var(--radius-full);
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
