--- a/packages/css/src/foundation/variables/border.css
+++ b/packages/css/src/foundation/variables/border.css
@@ -1,23 +1,18 @@
-@property --border-radius-sm {
-  syntax: "<length>";
-  initial-value: 4px;
-  inherits: true;
-}
+/*
+  Configured based on Tailwind CSS border radius
+  ref:
+  * https://tailwindcss.com/docs/border-radius
+  * https://tailwindcss.com/docs/theme#default-theme-variable-reference
+*/
 
-@property --border-radius {
-  syntax: "<length>";
-  initial-value: 6px;
-  inherits: true;
-}
-
-@property --border-radius-lg {
-  syntax: "<length>";
-  initial-value: 8px;
-  inherits: true;
-}
-
-@property --border-radius-full {
-  syntax: "<length>";
-  initial-value: 9999px;
-  inherits: true;
+:root {
+  --radius-xs: 0.125rem; /* 2px */
+  --radius-sm: 0.25rem; /* 4px */
+  --radius-md: 0.375rem; /* 6px */
+  --radius-lg: 0.5rem; /* 8px */
+  --radius-xl: 0.75rem; /* 12px */
+  --radius-2xl: 1rem; /* 16px */
+  --radius-3xl: 1.5rem; /* 24px */
+  --radius-4xl: 2rem; /* 32px */
+  --radius-full: 9999px
 }
