--- a/packages/css/src/foundation/variables/shadow.css
+++ b/packages/css/src/foundation/variables/shadow.css
@@ -1,23 +1,17 @@
-@property --shadow-sm {
-  syntax: "*";
-  initial-value: 0 2px 4px rgb(0 0 0 / 10%);
-  inherits: true;
-}
+/*
+  Configured based on Tailwind CSS
 
-@property --shadow-md {
-  syntax: "*";
-  initial-value: 0 4px 8px rgb(0 0 0 / 12%), 0 2px 4px rgb(0 0 0 / 8%);
-  inherits: true;
-}
+  ref:
+  * https://tailwindcss.com/docs/box-shadow
+  * https://tailwindcss.com/docs/theme#default-theme-variable-reference
+*/
 
-@property --shadow-lg {
-  syntax: "*";
-  initial-value: 0 8px 16px rgb(0 0 0 / 15%), 0 4px 8px rgb(0 0 0 / 10%);
-  inherits: true;
-}
-
-@property --shadow-xl {
-  syntax: "*";
-  initial-value: 0 16px 32px rgb(0 0 0 / 20%), 0 8px 16px rgb(0 0 0 / 15%);
-  inherits: true;
+:root {
+  --shadow-2xs: 0 1px rgb(0 0 0 / 5%);
+  --shadow-xs: 0 1px 2px 0 rgb(0 0 0 / 5%);
+  --shadow-sm: 0 1px 3px 0 rgb(0 0 0 / 10%), 0 1px 2px -1px rgb(0 0 0 / 10%);
+  --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 10%), 0 2px 4px -2px rgb(0 0 0 / 10%);
+  --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 10%), 0 4px 6px -4px rgb(0 0 0 / 10%);
+  --shadow-xl: 0 20px 25px -5px rgb(0 0 0 / 10%), 0 8px 10px -6px rgb(0 0 0 / 10%);
+  --shadow-2xl: 0 25px 50px -12px rgb(0 0 0 / 25%);
 }
