--- a/packages/css/src/components/badge.css
+++ b/packages/css/src/components/badge.css
@@ -9,7 +9,7 @@
   --badge-disabled-opacity: 0.65;
   --badge-transition-duration: 0.2s;
   --badge-transition-timing: ease;
-  --badge-small-font-size: var(--font-size-xs);
+  --badge-small-font-size: var(--text-xs);
   --badge-primary-color: var(--color-primary);
   --badge-primary-border-color: var(--color-primary);
   --badge-primary-text-color: var(--color-text-light);
@@ -82,7 +82,7 @@
   }
 
   &.--rounded {
-    --badge-border-radius: var(--radius-full);
+    --badge-border-radius: var(--border-radius-full);
   }
 
   &.--primary {
