--- a/packages/css/src/foundation/variables/typography.css
+++ b/packages/css/src/foundation/variables/typography.css
@@ -1,88 +1,61 @@
+/* stylelint-disable custom-property-pattern */
+
+/*
+  Configured based on Tailwind CSS
+
+  ref:
+  * https://tailwindcss.com/docs/theme#default-theme-variable-reference
+  * https://tailwindcss.com/docs/line-height
+  * https://tailwindcss.com/docs/font-weight
+*/
+
+
+:root {
+  --text-xs: 0.75rem; /* 12px */
+  --text-xs--line-height: calc(1 / 0.75);
+  --text-sm: 0.875rem; /* 14px */
+  --text-sm--line-height: calc(1.25 / 0.875);
+  --text-base: 1rem; /* 16px */
+  --text-base--line-height: calc(1.5 / 1);
+  --text-lg: 1.125rem; /* 18px */
+  --text-lg--line-height: calc(1.75 / 1.125);
+  --text-xl: 1.25rem; /* 20px */
+  --text-xl--line-height: calc(1.75 / 1.25);
+  --text-2xl: 1.5rem; /* 24px */
+  --text-2xl--line-height: calc(2 / 1.5);
+  --text-3xl: 1.875rem; /* 30px */
+  --text-3xl--line-height: calc(2.25 / 1.875);
+  --text-4xl: 2.25rem; /* 36px */
+  --text-4xl--line-height: calc(2.5 / 2.25);
+  --text-5xl: 3rem; /* 48px */
+  --text-5xl--line-height: 1;
+  --text-6xl: 3.75rem; /* 60px */
+  --text-6xl--line-height: 1;
+  --text-7xl: 4.5rem; /* 72px */
+  --text-7xl--line-height: 1;
+  --text-8xl: 6rem; /* 96px */
+  --text-8xl--line-height: 1;
+  --text-9xl: 8rem; /* 128px */
+  --text-9xl--line-height: 1;
+  --font-weight-extralight: 200;
+  --font-weight-light: 300;
+  --font-weight-normal: 400;
+  --font-weight-medium: 500;
+  --font-weight-semibold: 600;
+  --font-weight-bold: 700;
+  --font-weight-extrabold: 800;
+  --font-weight-black: 900;
+}
+
+/* Additional Properties */
 @property --font-family-base {
   syntax: "*";
   initial-value: system-ui, -apple-system, sans-serif;
   inherits: true;
 }
 
-@property --font-size-xs {
-  syntax: "<length>";
-  initial-value: 12px;
-  /* 0.75rem × 16px */
-  inherits: true;
-}
-
-@property --font-size-sm {
-  syntax: "<length>";
-  initial-value: 14px;
-  /* 0.875rem × 16px */
-  inherits: true;
-}
-
-@property --font-size-base {
-  syntax: "<length>";
-  initial-value: 16px;
-  /* 1rem × 16px */
-  inherits: true;
-}
-
-@property --font-size-lg {
-  syntax: "<length>";
-  initial-value: 20px;
-  /* 1.25rem × 16px */
-  inherits: true;
-}
-
-@property --font-size-xl {
-  syntax: "<length>";
-  initial-value: 24px;
-  /* 1.5rem × 16px */
-  inherits: true;
-}
-
 @property --line-height-none {
   syntax: "<number>";
   initial-value: 1;
-  inherits: true;
-}
-
-@property --line-height-sm {
-  syntax: "<number>";
-  initial-value: 1.25;
-  inherits: true;
-}
-
-@property --line-height-base {
-  syntax: "<number>";
-  initial-value: 1.5;
-  inherits: true;
-}
-
-@property --line-height-lg {
-  syntax: "<number>";
-  initial-value: 1.75;
-  inherits: true;
-}
-
-@property --font-weight-light {
-  syntax: "<integer>";
-  initial-value: 300;
-  inherits: true;
-}
-
-@property --font-weight-normal {
-  syntax: "<integer>";
-  initial-value: 400;
-  inherits: true;
-}
-
-@property --font-weight-medium {
-  syntax: "<integer>";
-  initial-value: 500;
-  inherits: true;
-}
-
-@property --font-weight-bold {
-  syntax: "<integer>";
-  initial-value: 700;
   inherits: true;
 }
