--- a/packages/css/src/foundation/variables/media.css
+++ b/packages/css/src/foundation/variables/media.css
@@ -1,5 +1,6 @@
 /*
-  Configured based on Tailwind CSS breakpoints
+  Configured based on Tailwind CSS
+
   ref: https://tailwindcss.com/docs/responsive-design
 */
 
