--- a/packages/css/src/foundation/variables/spacing.css
+++ b/packages/css/src/foundation/variables/spacing.css
@@ -1,5 +1,6 @@
 /*
-  NOTE: From Tailwind CSS v4.0.0
+  Configured based on Tailwind CSS
+
   refs:
    * https://tailwindcss.com/docs/theme#default-theme-variable-reference
    * https://tailwindcss.com/docs/padding
