--- a/packages/css/src/foundation/variables/border.css
+++ b/packages/css/src/foundation/variables/border.css
@@ -1,5 +1,6 @@
 /*
-  Configured based on Tailwind CSS border radius
+  Configured based on Tailwind CSS
+
   ref:
   * https://tailwindcss.com/docs/border-radius
   * https://tailwindcss.com/docs/theme#default-theme-variable-reference
