--- a/packages/css/src/components/label.css
+++ b/packages/css/src/components/label.css
@@ -2,11 +2,33 @@
   --label-display: block;
   --label-font-weight: var(--font-weight-medium);
   --label-spacing-bottom: var(--spacing-1);
+  --label-required-icon-content: "*";
+  --label-required-icon-size: 1em;
+  --label-required-icon-color: var(--color-danger);
+  --label-disabled-opacity: 0.6;
+
 
   display: var(--label-display);
   font-weight: var(--label-font-weight);
 
   &:not(:last-child) {
     margin-bottom: var(--label-spacing-bottom);
+  }
+
+  &.--disabled {
+    opacity: var(--label-disabled-opacity);
+    cursor: not-allowed;
+  }
+
+  &.--required {
+    display: inline-flex;
+    align-items: center;
+    gap: var(--spacing-1);
+
+    &::after {
+      font-size: var(--label-required-icon-size);
+      content: var(--label-required-icon-content);
+      color: var(--label-required-icon-color);
+    }
   }
 }
