--- a/packages/css/src/components/navbar.css
+++ b/packages/css/src/components/navbar.css
@@ -7,6 +7,7 @@
   --navbar-item-hover-bg-color: var(--color-primary);
   --navbar-item-hover-text-color: var(--color-text-light);
   --navbar-hamburger-icon-content: "☰";
+  --navbar-hamburger-icon-close-content: "×";
   --navbar-hamburger-icon-size: 1.5rem;
   --navbar-hamburger-icon-padding: 0 var(--spacing-2);
   --navbar-hamburger-icon-color: var(--color-text);
@@ -17,11 +18,21 @@
   --navbar-hamburger-menu-border-radius: 0 0 var(--radius-sm) var(--radius-sm);
   --navbar-hamburger-menu-box-shadow: var(--shadow-md);
   --navbar-hamburger-menu-item-separate-border: 1px solid var(--color-bg-light);
-  --navbar-hamburger-menu-zindex: var(--zindex-navbar);
+  --navbar-base-zindex: var(--zindex-navbar);
+  --navbar-backdrop-zindex: calc(var(--navbar-base-zindex) - 1);
+  --navbar-menu-zindex: calc(var(--navbar-base-zindex) + 1);
+  --navbar-hamburger-menu-slidein-transition: 0.1s ease-in-out;
+  --navbar-hamburger-menu-hover-item-transition: 0.3s ease-in-out;
+  --navbar-hamburger-float-menu-position-right: var(--spacing-2);
+  --navbar-hamburger-side-menu-top-padding: var(--navbar-min-height);
+  --navbar-hamburger-side-menu-max-width: 80vw;
+  --navbar-hamburger-side-menu-min-width: 40vw;
+  --navbar-hamburger-side-menu-backdrop-color: var(--color-overlay);
+  --navbar-hamburger-side-menu-backdrop-filter: blur(2px);
 
   min-width: 100%;
   width: max-content;
-  background-color: var(--color-bg-light);
+  background-color: var(--navbar-bg-color);
   min-height: var(--navbar-min-height);
   display: flex;
   align-items: stretch;
@@ -68,8 +79,13 @@
   }
 
   &.--transition {
+    .m-navbar__items {
+      transition: transform var(--navbar-hamburger-menu-slidein-transition);
+    }
+
     .m-navbar__item {
-      transition: background-color 0.3s, color 0.3s;
+      transition: background-color var(--navbar-hamburger-menu-hover-item-transition),
+        color var(--navbar-hamburger-menu-hover-item-transition);
     }
   }
 
@@ -96,31 +112,53 @@
       font-size: var(--navbar-hamburger-icon-size);
       line-height: var(--line-height-none);
     }
+
+    &[aria-expanded="true"] {
+      &::before {
+        content: var(--navbar-hamburger-icon-close-content);
+      }
+    }
   }
 
-  &:has(.m-navbar__hamburger) {
-    @media (--media-breakpoint-max-md) {
-      /* eslint-disable-next-line css/no-invalid-at-rules */
+  @media (--media-breakpoint-max-md) {
+    &:has(.m-navbar__hamburger) {
       position: relative;
+      z-index: var(--navbar-base-zindex);
 
       .m-navbar__hamburger {
         display: inline-flex;
       }
 
       .m-navbar__items {
-        z-index: var(--navbar-hamburger-menu-zindex);
+        z-index: var(--navbar-menu-zindex);
+        visibility: hidden;
+        opacity: 0;
+      }
+    }
+
+    &:has(.m-navbar__hamburger-menu[aria-expanded="true"]) {
+      .m-navbar__items {
+        visibility: visible;
+        opacity: 1;
+      }
+    }
+
+    /* Floating Menu */
+    &.--mobile-float-menu {
+      /* NOTE: It is not a problem to overwrite it because I want to prioritize the display with `.m-navbar__hamburger-menu[aria-expanded="true"]` */
+      /* stylelint-disable-next-line no-descending-specificity */
+      .m-navbar__items {
         position: absolute;
         top: 100%;
-        right: 0;
+        right: var(--navbar-hamburger-float-menu-position-right);
         width: min-content;
         flex-direction: column;
         align-items: stretch;
+        background-color: var(--navbar-hamburger-menu-bg-color);
         border: var(--navbar-hamburger-menu-border);
         border-top: none;
         border-radius: var(--navbar-hamburger-menu-border-radius);
         box-shadow: var(--navbar-hamburger-menu-box-shadow);
-        opacity: 0;
-        visibility: hidden;
       }
 
       .m-navbar__item {
@@ -132,28 +170,91 @@
           border-bottom: var(--navbar-hamburger-menu-item-separate-border);
         }
       }
+    }
 
-      &:has(.m-navbar__hamburger-menu[aria-expanded="true"]) {
-        .m-navbar__items {
-          visibility: visible;
-          opacity: 1;
+    /* Side Menu */
+    &.--mobile-side-menu {
+      /* backdrop */
+      &::after {
+        content: "";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: var(--navbar-hamburger-side-menu-backdrop-color);
+        backdrop-filter: var(--navbar-hamburger-side-menu-backdrop-filter);
+        z-index: var(--navbar-backdrop-zindex);
+        display: none;
+      }
+
+      /* NOTE: It is not a problem to overwrite it because I want to prioritize the display with `.m-navbar__hamburger-menu[aria-expanded="true"]` */
+      /* stylelint-disable-next-line no-descending-specificity */
+      .m-navbar__items {
+        position: fixed;
+        right: 0;
+        top: 0;
+        height: 100%;
+        width: min-content;
+        min-width: var(--navbar-hamburger-side-menu-min-width);
+        max-width: var(--navbar-hamburger-side-menu-max-width);
+        flex-direction: column;
+        align-items: stretch;
+        background-color: var(--navbar-hamburger-menu-bg-color);
+        box-shadow: var(--navbar-hamburger-menu-box-shadow);
+        transform: translateX(100%);
+      }
+
+      .m-navbar__item {
+        &:not(:last-child) {
+          border-bottom: var(--navbar-hamburger-menu-item-separate-border);
         }
       }
 
-      &.--hover-hamburger-menu {
-        &:has(.m-navbar__hamburger:hover),
-        &:has(.m-navbar__hamburger:focus),
-        &:has(.m-navbar__hamburger:focus-visible),
-        &:has(.m-navbar__hamburger-menu:hover),
-        &:has(.m-navbar__hamburger-menu:focus),
-        &:has(.m-navbar__hamburger-menu:focus-visible),
-        &:has(.m-navbar__items:hover),
-        &:has(.m-navbar__item:focus),
-        &:has(.m-navbar__item:focus-visible) {
+      &:has(.m-navbar__hamburger-menu[aria-expanded="true"]) {
+        /* NOTE: show backdrop */
+        &::after {
+          display: initial;
+        }
+
+        .m-navbar__items {
+          padding-top: var(--navbar-hamburger-side-menu-top-padding);
+          transform: translateX(0);
+        }
+
+        .m-navbar__hamburger-menu {
+          z-index: var(--navbar-menu-zindex);
+        }
+      }
+    }
+
+    /* Experimental: css only open menu on hover */
+    &.--hover-hamburger-menu {
+      &:has(.m-navbar__hamburger:hover),
+      &:has(.m-navbar__hamburger-menu:hover),
+      &:has(.m-navbar__items:hover) {
+        &:has(.m-navbar__hamburger-menu.--side-menu) {
           .m-navbar__items {
-            visibility: visible;
-            opacity: 1;
+            transform: translateX(0);
           }
+
+          /* NOTE: show backdrop */
+          &::after {
+            display: initial;
+          }
+        }
+
+        .m-navbar__hamburger-menu {
+          &::before {
+            content: var(--navbar-hamburger-icon-close-content);
+          }
+        }
+
+        /* NOTE: To make it easier to remove, the display processing during hover is placed here */
+        /* stylelint-disable-next-line no-descending-specificity */
+        .m-navbar__items {
+          visibility: visible !important;
+          opacity: 1 !important;
         }
       }
     }
