--- a/packages/css/src/components/card.css
+++ b/packages/css/src/components/card.css
@@ -4,6 +4,10 @@
   --card-bg-color: var(--color-white);
   --card-border-color: var(--color-border);
   --card-content-padding: var(--spacing-2);
+  --card-actions-padding: var(--spacing-1);
+  --card-actions-item-gap: var(--spacing-1);
+  --card-actions-justify: flex-end;
+  --card-actions-border-top: initial;
 
   background-color: var(--card-bg-color);
   border: 1px solid var(--card-border-color);
@@ -18,6 +22,14 @@
 
   .m-card__content {
     padding: var(--card-content-padding);
+  }
+
+  .m-card__actions {
+    padding: var(--card-actions-padding);
+    display: flex;
+    gap: var(--card-actions-item-gap);
+    justify-content: var(--card-actions-justify);
+    border-top: var(--card-actions-border-top);
   }
 
   &.--floating {
