--- a/packages/css/src/components/link.css
+++ b/packages/css/src/components/link.css
@@ -2,7 +2,7 @@
   --link-color: var(--color-secondary);
   --link-color-hover: rgb(from var(--link-color) r g b / 80%);
   --link-color-active: rgb(from var(--link-color) r g b / 50%);
-  --link-color-visited: rgb(from var(--link-color) r g b / 120%);
+  --link-color-visited: rgb(from var(--link-color) calc(r * 0.6) calc(g * 0.6) calc(b * 0.6));
   --link-text-decoration: underline;
   --link-underline-offset: 0.2em;
 
