--- a/packages/css/src/components/paragraph.css
+++ b/packages/css/src/components/paragraph.css
@@ -1,4 +1,5 @@
 .m-p {
-  margin-top: var(--spacing-0);
-  margin-bottom: var(--spacing-4);
+  --p-margin: var(--spacing-0) 0 var(--spacing-4) 0;
+
+  margin: var(--p-margin);
 }
