--- a/packages/css/src/components/navbar.css
+++ b/packages/css/src/components/navbar.css
@@ -19,8 +19,9 @@
   --navbar-hamburger-menu-box-shadow: var(--shadow-md);
   --navbar-hamburger-menu-item-separate-border: 1px solid var(--color-bg-light);
   --navbar-base-zindex: var(--zindex-navbar);
-  --navbar-backdrop-zindex: calc(var(--navbar-base-zindex) - 1);
-  --navbar-menu-zindex: calc(var(--navbar-base-zindex) + 1);
+  --navbar-backdrop-zindex: calc(var(--navbar-base-zindex) + 1);
+  --navbar-menu-zindex: calc(var(--navbar-backdrop-zindex) + 1);
+  --navbar-hamburger-menu-zindex: calc(var(--navbar-menu-zindex) + 1);
   --navbar-hamburger-menu-slidein-transition: 0.1s ease-in-out;
   --navbar-hamburger-menu-hover-item-transition: 0.3s ease-in-out;
   --navbar-hamburger-float-menu-position-right: var(--spacing-2);
@@ -174,6 +175,16 @@
 
     /* Side Menu */
     &.--mobile-side-menu {
+      &.--slide-left {
+        justify-content: initial;
+
+        .m-navbar__items {
+          right: auto;
+          left: 0;
+          transform: translateX(-100%);
+        }
+      }
+
       /* backdrop */
       &::after {
         content: "";
@@ -223,7 +234,7 @@
         }
 
         .m-navbar__hamburger-menu {
-          z-index: var(--navbar-menu-zindex);
+          z-index: var(--navbar-hamburger-menu-zindex);
         }
       }
     }
