fix: normalize hover and disabled borders for form controls

--- a/packages/css/src/components/input.css
+++ b/packages/css/src/components/input.css
@@ -30,6 +30,7 @@ input.m-input {
     cursor: not-allowed;
     opacity: var(--input-disabled-opacity);
     color: var(--input-disabled-color);
+    border-color: initial;
   }
 
   &:invalid,
