--- a/packages/css/src/components/navbar.css
+++ b/packages/css/src/components/navbar.css
@@ -58,6 +58,7 @@
     width: 100%;
     display: flex;
     align-items: stretch;
+    gap: var(--navbar-items-gap);
   }
 
   .m-navbar__item {
@@ -71,7 +72,20 @@
       gap: var(--navbar-item-gap);
     }
 
-    &:where(a):hover {
+    &:has(a) {
+      padding: initial;
+    }
+
+    a {
+      display: inline-flex;
+      width: 100%;
+      height: 100%;
+      padding: var(--navbar-item-padding);
+      align-items: center;
+      text-decoration: none;
+    }
+
+    &:has(a):hover {
       background-color: var(--navbar-item-hover-bg-color);
       color: var(--navbar-item-hover-text-color);
     }
@@ -92,6 +106,8 @@
       }
     }
 
+    /* NOTE: Transitions are only set within `--transition`, so there is no problem */
+    /* stylelint-disable-next-line no-descending-specificity */
     .m-navbar__item {
       transition: background-color var(--navbar-hamburger-menu-hover-item-transition),
         color var(--navbar-hamburger-menu-hover-item-transition);
