--- a/packages/css/src/layouts/columns.css
+++ b/packages/css/src/layouts/columns.css
@@ -142,6 +142,14 @@
 
   &.--auto-fit {
     grid-template-columns: repeat(auto-fit, minmax(var(--columns-auto-fit-min), 1fr));
+
+    /*
+      NOTE: fallback for webkit
+      https://bugs.webkit.org/show_bug.cgi?id=282326
+    */
+    @supports (-webkit-overflow-scrolling: touch) {
+      grid-template-columns: repeat(auto-fill, minmax(var(--columns-auto-fit-min), 1fr));
+    }
   }
 
   &.--no-gap {
